# modules/noti/infrastructure/repository/webhook_repo.go
@@ -4,8 +4,8 @@ import (
 	"fmt"
 	"net/http"
 
-	domEntity "git.k3.acornsoft.io/msit-auto-ml/koreserv/modules/resource/domain/entity"
-	domRepo "git.k3.acornsoft.io/msit-auto-ml/koreserv/modules/resource/domain/repository"
+	domEntity "git.k3.acornsoft.io/msit-auto-ml/koreserv/modules/noti/domain/entity"
+	domRepo "git.k3.acornsoft.io/msit-auto-ml/koreserv/modules/noti/domain/repository"
 	"git.k3.acornsoft.io/msit-auto-ml/koreserv/system/handler"
 
 	//"git.k3.acornsoft.io/msit-auto-ml/koreserv/system/service"
@@ -14,8 +14,8 @@ import (
 )
 
 // NewAuthenticationRepo new AuthenticationRepo implement IAuthenticationRepo
-func NewPredictionEnvRepo(h *handler.Handler) (domRepo.IPredictionEnvRepo, error) {
-	repo := new(PredictionEnvRepo)
+func NewWebHookRepo(h *handler.Handler) (domRepo.IWebHookRepo, error) {
+	repo := new(WebHookRepo)
 	repo.handler = h
 
 	cfg, err := h.GetConfig()
@@ -28,11 +28,11 @@ func NewPredictionEnvRepo(h *handler.Handler) (domRepo.IPredictionEnvRepo, error
 }
 
 // AuthenticationRepo type
-type PredictionEnvRepo struct {
+type WebHookRepo struct {
 	BaseRepo
 }
 
-func (r *PredictionEnvRepo) Save(req *domEntity.PredictionEnv) error {
+func (r *WebHookRepo) Save(req *domEntity.WebHook) error {
 	// select db
 	dbCon, err := r.handler.GetGormDB(r.dbConnectionName)
 	if err != nil {
@@ -49,22 +49,22 @@ func (r *PredictionEnvRepo) Save(req *domEntity.PredictionEnv) error {
 	return nil
 }
 
-func (r *PredictionEnvRepo) GetByID(ID string) (*domEntity.PredictionEnv, error) {
+func (r *WebHookRepo) GetByID(id string) (*domEntity.WebHook, error) {
 	// select db
 	dbCon, err := r.handler.GetGormDB(r.dbConnectionName)
 	if err != nil {
 		return nil, err
 	}
 
-	var domEntity = &domEntity.PredictionEnv{}
+	var domEntity = &domEntity.WebHook{}
 	var count int64
 
-	if err := dbCon.Where("id = ?", ID).Preload(clause.Associations).Find(&domEntity).Count(&count).Error; err != nil {
+	if err := dbCon.Where("id = ?", id).Preload(clause.Associations).Find(&domEntity).Count(&count).Error; err != nil {
 		return nil, &sysError.SystemError{StatusCode: http.StatusInternalServerError, Err: err}
 	}
 
 	if count == 0 {
-		return nil, &sysError.SystemError{StatusCode: http.StatusNotFound, Err: fmt.Errorf("invalid prediction_env id")}
+		return nil, &sysError.SystemError{StatusCode: http.StatusNotFound, Err: fmt.Errorf("invalid WebHook id")}
 	}
 
 	// return response
@@ -74,7 +74,7 @@ func (r *PredictionEnvRepo) GetByID(ID string) (*domEntity.PredictionEnv, error)
 
 }
 
-func (r *PredictionEnvRepo) GetList(queryName string, pagination interface{}, filter map[string]interface{}) ([]*domEntity.PredictionEnv, interface{}, error) {
+func (r *WebHookRepo) GetList(queryName string, pagination interface{}, filterEntity interface{}) ([]*domEntity.WebHook, interface{}, error) {
 	p := pagination.(Pagination)
 
 	var mapSort string
@@ -93,33 +93,38 @@ func (r *PredictionEnvRepo) GetList(queryName string, pagination interface{}, fi
 		return nil, p, err
 	}
 
-	var entityModel []*domEntity.PredictionEnv
+	var result []*domEntity.WebHook
 
-	if err := dbCon.Model(entityModel).Scopes(paginate(&entityModel, &p, dbCon, queryName, filter)).Find(&entityModel).Error; err != nil {
+	filterDomain := filterEntity.(domEntity.WebHook)
+	entityModel := domEntity.WebHook{
+		DeploymentID: filterDomain.DeploymentID,
+	}
+
+	if err := dbCon.Model(&entityModel).Scopes(paginate(&entityModel, &p, dbCon, queryName)).Find(&result).Error; err != nil {
 		return nil, p, &sysError.SystemError{StatusCode: http.StatusInternalServerError, Err: err}
 	}
 
-	resp := entityModel
+	resp := result
 
 	return resp, p, nil
 }
 
-func (r *PredictionEnvRepo) GetForUpdate(modelPackageID string) (*domEntity.PredictionEnv, error) {
+func (r *WebHookRepo) GetForUpdate(id string) (*domEntity.WebHook, error) {
 	// select db
 	dbCon, err := r.handler.GetGormDB(r.dbConnectionName)
 	if err != nil {
 		return nil, err
 	}
 
-	var entityModel = &domEntity.PredictionEnv{}
+	var entityModel = &domEntity.WebHook{ID: id}
 	var count int64
 
-	if err := dbCon.Clauses(clause.Locking{Strength: "UPDATE"}).Where("id = ?", modelPackageID).Preload(clause.Associations).Find(&entityModel).Count(&count).Error; err != nil {
+	if err := dbCon.Clauses(clause.Locking{Strength: "UPDATE"}).Where("id = ?", id).Preload(clause.Associations).Find(&entityModel).Count(&count).Error; err != nil {
 		return nil, &sysError.SystemError{StatusCode: http.StatusInternalServerError, Err: err}
 	}
 
 	if count == 0 {
-		return nil, &sysError.SystemError{StatusCode: http.StatusNotFound, Err: fmt.Errorf("invalid prediction_env id")}
+		return nil, &sysError.SystemError{StatusCode: http.StatusNotFound, Err: fmt.Errorf("invalid id")}
 	}
 
 	// return response
@@ -129,14 +134,14 @@ func (r *PredictionEnvRepo) GetForUpdate(modelPackageID string) (*domEntity.Pred
 
 }
 
-func (r *PredictionEnvRepo) Delete(id string) error {
+func (r *WebHookRepo) Delete(id string) error {
 	// select db
 	dbCon, err := r.handler.GetGormDB(r.dbConnectionName)
 	if err != nil {
 		return err
 	}
 
-	var domEntity = &domEntity.PredictionEnv{}
+	var domEntity = &domEntity.WebHook{}
 	var count int64
 
 	if err := dbCon.Where("id = ?", id).Find(&domEntity).Count(&count).Error; err != nil {
@@ -144,7 +149,7 @@ func (r *PredictionEnvRepo) Delete(id string) error {
 	}
 
 	if count == 0 {
-		return &sysError.SystemError{StatusCode: http.StatusNotFound, Err: fmt.Errorf("invalid prediction_env id")}
+		return &sysError.SystemError{StatusCode: http.StatusNotFound, Err: fmt.Errorf("invalid id")}
 	}
 
 	if err := dbCon.Select(clause.Associations).Delete(domEntity).Error; err != nil {
@@ -154,32 +159,26 @@ func (r *PredictionEnvRepo) Delete(id string) error {
 	return nil
 }
 
-func (r *PredictionEnvRepo) GetListByProject(queryName string, pagination interface{}, filter map[string]interface{}) ([]*domEntity.PredictionEnv, interface{}, error) {
-	p := pagination.(Pagination)
-
-	var mapSort string
-	switch p.Sort {
-	case "CreateDesc":
-		mapSort = "id desc"
-	case "CreateASC":
-		mapSort = "id asc"
-	}
-
-	p.Sort = mapSort
-
+func (r *WebHookRepo) GetListByInternal(filterEntity interface{}) ([]*domEntity.WebHook, error) {
 	// select db
 	dbCon, err := r.handler.GetGormDB(r.dbConnectionName)
 	if err != nil {
-		return nil, p, err
+		return nil, err
 	}
 
-	var entityModel []*domEntity.PredictionEnv
+	var result []*domEntity.WebHook
 
-	if err := dbCon.Model(entityModel).Scopes(paginate(&entityModel, &p, dbCon, queryName, filter)).Find(&entityModel).Error; err != nil {
-		return nil, p, &sysError.SystemError{StatusCode: http.StatusInternalServerError, Err: err}
+	filterDomain := filterEntity.(domEntity.WebHook)
+	entityModel := domEntity.WebHook{
+		DeploymentID:  filterDomain.DeploymentID,
+		TriggerSource: filterDomain.TriggerSource,
 	}
 
-	resp := entityModel
+	if err := dbCon.Where(entityModel).Find(&result).Error; err != nil {
+		return nil, &sysError.SystemError{StatusCode: http.StatusInternalServerError, Err: err}
+	}
 
-	return resp, p, nil
+	resp := result
+
+	return resp, nil
 }
